Open macro runner with drag/drop ijm
Only for the main QuPath window currently